--- a/stories/index.html
+++ b/stories/index.html
@@ -602,6 +602,12 @@
       <td><a name="zh0098"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0110</td>
+      <td><a href="/stories/zh/0110_一粒小种子：旺加里·马塔伊的故事_slides.html" target="_blank">一粒小种子：旺加里·马塔伊的故事</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0111</td>
       <td><a href="/stories/zh/0111_为什么河马没有毛发_slides.html" target="_blank">为什么河马没有毛发</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -654,6 +660,12 @@
       <td><a href="/stories/zh/0130_奶奶_slides.html" target="_blank">奶奶</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0130"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0141</td>
+      <td><a href="/stories/zh/0141_鸡和千足虫_slides.html" target="_blank">鸡和千足虫</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0147</td>
@@ -716,6 +728,12 @@
       <td><a name="zh0206"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0210</td>
+      <td><a href="/stories/zh/0210_丁吉和奶牛_slides.html" target="_blank">丁吉和奶牛</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0210"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0212</td>
       <td><a href="/stories/zh/0212_我的小山羊_slides.html" target="_blank">我的小山羊</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -770,6 +788,12 @@
       <td><a name="zh0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0262</td>
+      <td><a href="/stories/zh/0262_玛格威_slides.html" target="_blank">玛格威</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0262"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0264</td>
       <td><a href="/stories/zh/0264_信_slides.html" target="_blank">信</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -780,6 +804,12 @@
       <td><a href="/stories/zh/0271_两个_slides.html" target="_blank">两个</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="/stories/zh/0291_福思的姐姐说了什么_slides.html" target="_blank">福思的姐姐说了什么</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0294</td>
@@ -828,6 +858,12 @@
       <td><a href="/stories/zh/0320_你在做什么_slides.html" target="_blank">你在做什么？</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="zh0320"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/zh/0324_离家进城的那一天_slides.html" target="_blank">离家进城的那一天</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsbHJud3VfdHkxOUE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="zh0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0331</td>
@@ -2961,7 +2997,7 @@
       <td>0110</td>
       <td><a href="http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#tl0110">tl</a></td>
+      <td><a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#tl0110">tl</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -3033,7 +3069,7 @@
       <td>0141</td>
       <td><a href="http://my.africanstorybook.org/stories/chicken-and-millipede">Chicken and Millipede</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#tl0141">tl</a></td>
+      <td><a href="#ko0141">ko</a>, <a href="#no0141">no</a>, <a href="#tl0141">tl</a>, <a href="#zh0141">zh</a></td>
     </tr>
     <tr>
       <td>0147</td>
@@ -3105,7 +3141,7 @@
       <td>0210</td>
       <td><a href="http://my.africanstorybook.org/stories/tingi-and-cows">Tingi and the Cows</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0210">es</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#tl0210">tl</a></td>
+      <td><a href="#es0210">es</a>, <a href="#ko0210">ko</a>, <a href="#no0210">no</a>, <a href="#tl0210">tl</a>, <a href="#zh0210">zh</a></td>
     </tr>
     <tr>
       <td>0212</td>
@@ -3165,7 +3201,7 @@
       <td>0262</td>
       <td><a href="http://my.africanstorybook.org/stories/magozwe-0">Magozwe</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#tl0262">tl</a></td>
+      <td><a href="#tl0262">tl</a>, <a href="#zh0262">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
@@ -3195,7 +3231,7 @@
       <td>0291</td>
       <td><a href="http://my.africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ko0291">ko</a>, <a href="#tl0291">tl</a></td>
+      <td><a href="#ko0291">ko</a>, <a href="#tl0291">tl</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0294</td>
@@ -3255,7 +3291,7 @@
       <td>0324</td>
       <td><a href="http://my.africanstorybook.org/stories/day-i-left-home-city">Day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0324">ko</a>, <a href="#tl0324">tl</a></td>
+      <td><a href="#ko0324">ko</a>, <a href="#tl0324">tl</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
