update audio page

--- a/audio/index.html
+++ b/audio/index.html
@@ -10,7 +10,7 @@
       <table><tr><td>
       <p>Below are links to <a href="https://global-asp.github.io/">Global ASP</a> stories in multiple languages that have been read aloud by volunteers. Each page of the story will be read out loud as you turn the pages of the slideshow. You can go forward or backward to hear particular pages as many times as you like.</p>
 
-      <p>If you would like to read one of our translations aloud in your language, please <a href="mailto:globalafricanstorybook@gmail.com">let us know</a>!</p>
+      <p>If you would like to read one of our translations aloud in your language, please <a href="mailto:globalafricanstorybook@gmail.com">let us know</a>! Make sure to consult our <a href="/guidelines/audio_readers/">guidelines for readers</a> before recording.</p>
 
       <p>See also our <a href="asp/">list of stories</a> from the original <a href="http://www.africanstorybook.org/">African Storybook Project</a> read aloud in <a href="asp/">African languages</a>!</p>
 
