--- a/stories/no/0234_andisawa-vår-fotballhelt.html
+++ b/stories/no/0234_andisawa-vår-fotballhelt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>球星安迪斯瓦</title>
+    <title>Andisawa vår fotballhelt</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,68 +43,68 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 
-<h1 id="section">球星安迪斯瓦</h1>
+<h1 id="andisawa-vr-fotballhelt">Andisawa vår fotballhelt</h1>
 
-Eden Daniels<br>中文</div><div class="pagebreak">
+Eden Daniels<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
 
-<p>安迪斯瓦喜欢看男孩子们踢足球，她多么希望自己也能加入他们啊！她跑去问教练，自己能不能跟男孩们一起训练。</p>
+<p>Andisawa så på gutta spille fotball. Så gjerne hun ville vært med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
 
-<p>教练两手叉着腰，摇了摇头说：“在这个学校，只有男孩们能踢足球。”</p>
+<p>Treneren satte hendene i siden. “På skolen her får bare gutter spille fotball”, sa han.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
 
-<p>男孩们让安迪斯瓦去玩投球。他们觉得，女孩们应该玩儿投球，足球是男孩们的运动。安迪斯瓦很沮丧。</p>
+<p>Gutta sa: “Gå og spill nettball. Nettball er for jenter og fotball er for gutter”. Andisawa ble sinna.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
 
-<p>第二天，学校里要举行一场盛大的足球比赛。教练有点儿担心，因为队里最棒的球员生病了，没法上场。</p>
+<p>Dagen etter var det en stor fotballkamp på skolen. Men den beste spilleren på laget var syk og kunne ikke spille. Hva skulle treneren gjøre?</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
 
-<p>安迪斯瓦跑到教练那里，求他让自己替补上场。教练犹豫不决，最后他决定让安迪斯瓦试一试。</p>
+<p>Andisawa løp bort til treneren og ba og ba om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha med Andisawa på laget.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
 
-<p>比赛很激烈，半场结束后，两队都没有进球。</p>
+<p>Det ble en hard kamp. Ingen hadde scoret mål etter første omgang.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
 
-<p>比赛的下半场，一个男孩把球传给安迪斯瓦，安迪斯瓦飞快地朝球门跑去，用力一踢，球进了！</p>
+<p>I andre omgang sentret en gutt ballen til Andisawa. Hun løp mot målet, brente til ballen og scoret.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
 
-<p>人群沸腾了！从那天开始，女孩们也可以在学校踢足球了。</p>
+<p>Publikum var fra seg av glede. Siden den dagen fikk jenter også spille fotball på skolen.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>作者:</strong> Eden Daniels<br /><strong>绘画:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br /><strong>翻译:</strong> Vicky Liu<br /><strong>语言:</strong> 中文</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">here</a>
+<p><strong>Tekst:</strong> Eden Daniels<br /><strong>Illustrasjoner:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br /><strong>Oversettelse:</strong> Finn Stranger-Johannessen<br /><strong>Språk:</strong> norsk</p>
+<p>Denne fortellingen kommer fra <a href="https://global-asp.github.io/">Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href="http://africanstorybook.org/">African Storybook Project</a> til alle verdens språk.<p>Du kan se den originale fortellingen på ASP-websida <a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">her</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
