--- a/stories/index.html
+++ b/stories/index.html
@@ -1949,6 +1949,12 @@
       <td><a name="no0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0234</td>
+      <td><a href="/stories/no/0234_andisawa-vår-fotballhelt_slides.html" target="_blank">Andisawa vår fotballhelt</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/no/0253_min-billedbok_slides.html" target="_blank">Min billedbok</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3177,7 +3183,7 @@
       <td>0234</td>
       <td><a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ko0234">ko</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
