--- a/stories/no/0234_andisawa-vår-fotballhelt_slides.html
+++ b/stories/no/0234_andisawa-vår-fotballhelt_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>驴孩子 - Global African Storybook</title>
+  <title>Andisawa vår fotballhelt - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="驴孩子" class="slide level1">
-<h1>驴孩子</h1>
+<section id="andisawa-vår-fotballhelt" class="slide level1">
+<h1>Andisawa vår fotballhelt</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
-<p>有个女孩最先发现了远处有个奇怪的身影。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
+<p>Andisawa så på gutta spille fotball. Så gjerne hun ville vært med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
-<p>那个身影越靠越近，她看清楚了，那是一个快生孩子的妇女。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
+<p>Treneren satte hendene i siden. &quot;På skolen her får bare gutter spille fotball&quot;, sa han.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
-<p>女孩有点儿害羞，但她还是勇敢地走上前去。和女孩随行的人们说：“我们必须和她呆在一起，我们必须保护她和她的孩子。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
+<p>Gutta sa: &quot;Gå og spill nettball. Nettball er for jenter og fotball er for gutter&quot;. Andisawa ble sinna.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
-<p>孩子很快就要降生了。“用力啊！”“快拿毯子来！”“水！”“再用点力！”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
+<p>Dagen etter var det en stor fotballkamp på skolen. Men den beste spilleren på laget var syk og kunne ikke spille. Hva skulle treneren gjøre?</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
-<p>当他们看到孩子时，所有人都吓了一跳，“一头驴？”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
+<p>Andisawa løp bort til treneren og ba og ba om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha med Andisawa på laget.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>大家七嘴八舌吵起来。一些人说：“我们说过要保护母亲和孩子的，我们必须这样做。”但是还有一些人反驳说：“但是他们会给我们带来厄运。”</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
+<p>Det ble en hard kamp. Ingen hadde scoret mål etter første omgang.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
-<p>妇女发现自己又孤零零一人了。她不知道该拿这个奇怪的孩子怎么办，她也不知道自己该怎么办。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
+<p>I andre omgang sentret en gutt ballen til Andisawa. Hun løp mot målet, brente til ballen og scoret.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
-<p>最后，她决定接受这个孩子，做他的妈妈。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
+<p>Publikum var fra seg av glede. Siden den dagen fikk jenter også spille fotball på skolen.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,126 +168,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
-<p>如果这个孩子一直这般大小，不长大的话，一切都会变得不一样。但是这个驴孩子越长越大，现在他再也不能趴在妈妈的背上。无论他多么努力，他始终不能像人类一样。他的妈妈累了，放弃了。有时候，她让他做一些动物会做的工作。</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
-<p>驴孩子感到迷茫，也很生气。他这个也不能做，那个也不能做。他不能这样，也不能那样。有一天，他太生气了，一脚把他的妈妈踹到地上。</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
-<p>驴孩子羞愧极了，他逃跑了，跑得越远越好。</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>当他停下来的时候，天已经黑了，驴孩子迷路了。他在黑暗里哼哼，“咴咴”，黑暗中传来了回声，“咴咴”。他孤零零的一个人，卷成了一团，心中充满烦恼，沉沉地睡去。</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
-<p>驴孩子醒了，他发现有个老人低头盯着他。他看着老人的眼睛，感觉到了一丝希望。</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
-<p>驴孩子和老人住在一起，老人教会他很多生存的本领。驴孩子认真地听着，学得很快。老人也学了很多。他们互相帮助，遇到开心的事情就一起哈哈大笑。</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
-<p>一天早上，老人让驴孩子带他到山顶。</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>他们登上山顶，环绕在云雾中，睡着了。驴孩子梦到他的妈妈生病了，正在呼唤他，然后他就醒了......</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
-<p>......云雾消失了，他的朋友—那个老人—也消失了。</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
-<p>驴孩子终于知道要做什么了。</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
-<p>驴孩子找到了他的妈妈，她孤零零一个人，正在为走失的孩子伤心。他们互相打量了很久，然后紧紧地抱在了一起。</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
-<p>驴孩子和妈妈住在一起，慢慢长大，学会了如何共同生活。渐渐的，其他的家庭也搬到他们附近，住了下来。</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="驴孩子-1">驴孩子</h2>
-<strong>作者:</strong> Lindiwe Matshikiza<br> <strong>绘画:</strong> Meghan Judge<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
+<h2 id="andisawa-vår-fotballhelt-1">Andisawa vår fotballhelt</h2>
+<strong>Tekst:</strong> Eden Daniels<br> <strong>Illustrasjoner:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/donkey-child'>here</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/andiswa-soccer-star'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
