--- a/stories/zh/0066_诺孜贝儿和三根头发_slides.html
+++ b/stories/zh/0066_诺孜贝儿和三根头发_slides.html
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <h2 id="诺孜贝儿和三根头发-1">诺孜贝儿和三根头发</h2>
-<strong>作者:</strong> Tessa Welch<br> <strong>绘画:</strong> Wiehan de Jager<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Tessa Welch<br> <strong>绘画:</strong> Wiehan de Jager<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
