--- a/stories/zh/0110_一粒小种子：旺加里·马塔伊的故事_slides.html
+++ b/stories/zh/0110_一粒小种子：旺加里·马塔伊的故事_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="一粒小种子旺加里马塔伊的故事-1">一粒小种子：旺加里·马塔伊的故事</h2>
-<strong>作者:</strong> Nicola Rijsdijk<br> <strong>绘画:</strong> Maya Marshak<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Nicola Rijsdijk<br> <strong>绘画:</strong> Maya Marshak<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
