--- a/stories/zh/0111_为什么河马没有毛发_slides.html
+++ b/stories/zh/0111_为什么河马没有毛发_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="为什么河马没有毛发-1">为什么河马没有毛发</h2>
-<strong>作者:</strong> Basilio Gimo, David Ker<br> <strong>绘画:</strong> Carol Liddiment<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Basilio Gimo, David Ker<br> <strong>绘画:</strong> Carol Liddiment<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
