--- a/stories/zh/0210_丁吉和奶牛_slides.html
+++ b/stories/zh/0210_丁吉和奶牛_slides.html
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <h2 id="丁吉和奶牛-1">丁吉和奶牛</h2>
-<strong>作者:</strong> Ingrid Schechter<br> <strong>绘画:</strong> Ingrid Schechter<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Ingrid Schechter<br> <strong>绘画:</strong> Ingrid Schechter<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
