--- a/stories/zh/0243_和奶奶一起过暑假.html
+++ b/stories/zh/0243_和奶奶一起过暑假.html
@@ -187,7 +187,7 @@ Violet Otieno<br>中文</div><div class="pagebreak">
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>作者:</strong> Violet Otieno<br /><strong>绘画:</strong> Catherine Groenewald<br /><strong>翻译:</strong> Vicky<br /><strong>语言:</strong> 中文</p>
+<p><strong>作者:</strong> Violet Otieno<br /><strong>绘画:</strong> Catherine Groenewald<br /><strong>翻译:</strong> Vicky Liu<br /><strong>语言:</strong> 中文</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/holidays-grandmother">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
