--- a/stories/zh/0294_奶奶的香蕉_slides.html
+++ b/stories/zh/0294_奶奶的香蕉_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <h2 id="奶奶的香蕉-1">奶奶的香蕉</h2>
-<strong>作者:</strong> Ursula Nafula<br> <strong>绘画:</strong> Catherine Groenewald<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Ursula Nafula<br> <strong>绘画:</strong> Catherine Groenewald<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
