--- a/stories/zh/0296_卖香蕉的汤姆_slides.html
+++ b/stories/zh/0296_卖香蕉的汤姆_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <h2 id="卖香蕉的汤姆-1">卖香蕉的汤姆</h2>
-<strong>作者:</strong> Humphreys Odunga<br> <strong>绘画:</strong> Zablon Alex Nguku<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Humphreys Odunga<br> <strong>绘画:</strong> Zablon Alex Nguku<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
