--- a/stories/zh/0315_萨可满的歌声_slides.html
+++ b/stories/zh/0315_萨可满的歌声_slides.html
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <h2 id="萨可满的歌声-1">萨可满的歌声</h2>
-<strong>作者:</strong> Ursula Nafula<br> <strong>绘画:</strong> Peris Wachuka<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Ursula Nafula<br> <strong>绘画:</strong> Peris Wachuka<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
