--- a/stories/zh/0320_你在做什么_slides.html
+++ b/stories/zh/0320_你在做什么_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <h2 id="你在做什么-1">你在做什么？</h2>
-<strong>作者:</strong> Nina Orange<br> <strong>绘画:</strong> Wiehan de Jager, Angie &amp; Upesh, Marion Drew<br> <strong>翻译:</strong> Vicky<br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Nina Orange<br> <strong>绘画:</strong> Wiehan de Jager, Angie &amp; Upesh, Marion Drew<br> <strong>翻译:</strong> Vicky Liu<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
