--- a/stories/index.html
+++ b/stories/index.html
@@ -2279,6 +2279,12 @@
       <td><a name="pa0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/pa/0027_ਫ਼ੈਸਲਾ_slides.html" target="_blank">ਫ਼ੈਸਲਾ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0067</td>
       <td><a href="/stories/pa/0067_ਖਾਣਾ-ਪਕਾਉਣਾ_slides.html" target="_blank">ਖਾਣਾ ਪਕਾਉਣਾ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2301,6 +2307,12 @@
       <td><a href="/stories/pa/0231_ਮੌਸਮ-ਦੀ-ਕਿਤਾਬ_slides.html" target="_blank">ਮੌਸਮ ਦੀ ਕਿਤਾਬ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="pa0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0234</td>
+      <td><a href="/stories/pa/0234_ਐਂਨਡਿਸਵਾ-ਫੁੱਟਬਾਲ-ਸਟਾਰ_slides.html" target="_blank">ਐਂਨਡਿਸਵਾ ਫੁੱਟਬਾਲ ਸਟਾਰ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsMjA3dlU0YnB3NWM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="pa0234"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -2871,7 +2883,7 @@
       <td>0027</td>
       <td><a href="http://my.africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0027">ko</a>, <a href="#tl0027">tl</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#tl0027">tl</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -3183,7 +3195,7 @@
       <td>0234</td>
       <td><a href="http://my.africanstorybook.org/stories/andiswa-soccer-star">Andiswa Soccer Star</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
+      <td><a href="#ko0234">ko</a>, <a href="#no0234">no</a>, <a href="#pa0234">pa</a>, <a href="#tl0234">tl</a>, <a href="#zh0234">zh</a></td>
     </tr>
     <tr>
       <td>0243</td>
