--- a/stories/no/0006_anansi-og-visdommen.html
+++ b/stories/no/0006_anansi-og-visdommen.html
@@ -49,14 +49,14 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
 
-<p>For lenge lenge siden visste ikke folk noen ting. De visste ikke hvordan de dyrket jorda, de kunne ikke veve tøy eller lage redskaper av jern. All verdens visdom eide bare guden Nyame i himmelen. Og han gjemte på den i en leirkrukke.</p>
+<p>For lenge lenge siden visste ikke folk noen ting. De visste ikke hvordan man dyrket jorda, de kunne ikke veve tøy eller lage redskaper av jern. All verdens visdom eide bare guden Nyame i himmelen. Og han gjemte på den i en leirkrukke.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
 
-<p>En dag bestemte Nyame seg for å gi krukka med visdom til Anansi. Og hver gang Anansi så i krukka lærte han noe nytt. Det var spennende!</p>
+<p>En dag bestemte Nyame seg for å gi krukka med visdom til Anansi. Hver gang Anansi så i krukka lærte han noe nytt. Det var spennende!</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,7 +70,7 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
 
-<p>Den lille gutten til Anansi hadde stått og sett på ved foten av treet. “Hadde det ikke vært lettere å klatre med krukka på ryggen istedet?” sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
+<p>Den lille sønnen til Anansi hadde stått og sett på ved foten av treet. “Hadde det ikke vært lettere å klatre med krukka på ryggen istedet?” sa han. Anansi prøvde å binde fast leirkrukka full av visdom på ryggen. Og da ble det jo mye lettere.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Ghanaian folktale<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>Den gikk i tusen knas. Det ble fritt for alle å dele visdommen. Og sånn lærte folk å dyrke jorda, veve klær og lage redskaper av jern. Og alle de andre tingene folk vet hvordan de skal lage.</p>
+<p>Den gikk i tusen knas. Da ble det fritt for alle å dele visdommen. Og sånn lærte folk å dyrke jorda, veve klær og lage redskaper av jern, og alle de andre tingene folk vet hvordan de skal lage.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
