--- a/stories/no/0111_hvorfor-flodhester-ikke-har-hår_slides.html
+++ b/stories/no/0111_hvorfor-flodhester-ikke-har-hår_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
-<p>Flodhest var der også – han gikk en tur og spiste litt fint grønt gress.</p>
+<p>Flodhest var der også. Han gikk en tur og spiste litt fint grønt gress.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>Flodhest ba om unnskyldning til Kanin: &quot;Jeg er lei meg, vennen min I så deg ikke. Vær så snill å tilgi meg!&quot; Men Kanin vill ikke høre og han ropte til Flodhest: &quot;Du gjorde det med vilje! En dag kommer du til å få se! Dette kommer til å straffe seg!&quot;</p>
+<p>Flodhest ba om unnskyldning til Kanin: &quot;Jeg er lei meg, vennen min, jeg så deg ikke. Vær så snill å tilgi meg!&quot; Men Kanin ville ikke høre, og han ropte til Flodhest: &quot;Du gjorde det med vilje! En dag kommer du til å få se! Dette kommer til å straffe seg!&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Da dro Kanin for å find Ild, og han sa: &quot;Dra og brenn Flodhest når hun kommer ut av vannet for å spise gress. Hun tråkka på meg!&quot; Ild svarte: &quot;Ikke noe problem, Kanin, vennen min. Jeg skal gjøre akkurat det du ba meg om.&quot;</p>
+<p>Da dro Kanin for å finne Ild, og han sa: &quot;Dra og brenn Flodhest når hun kommer ut av vannet for å spise gress. Hun tråkka på meg!&quot; Ild svarte: &quot;Ikke noe problem, Kanin, vennen min. Jeg skal gjøre akkurat det du ba meg om.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>Flodhest begynte å gråte og løp mot vannet. Alt håret hennes brant i ilden. Flodhest gråt: &quot;Håret mitt har brent bort i ilden! Du brente alt håret mitt! Håret mitt er borte! Det vakre, vakre håret mitt!</p>
+<p>Flodhest begynte å gråte og løp mot vannet. Alt håret hennes brant opp i ilden. Flodhest gråt: &quot;Håret mitt har brent bort i ilden! Du brente alt håret mitt! Håret mitt er borte! Det vakre, vakre håret mitt!</p>
 <center>
 <strong>7</strong>
 </center>
