--- a/stories/no/0234_fotballhelten-andiswa_slides.html
+++ b/stories/no/0234_fotballhelten-andiswa_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Andisawa vår fotballhelt - Global African Storybook</title>
+  <title>Fotballhelten Andiswa  - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="andisawa-vår-fotballhelt" class="slide level1">
-<h1>Andisawa vår fotballhelt</h1>
+<section id="fotballhelten-andiswa" class="slide level1">
+<h1>Fotballhelten Andiswa</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
-<p>Andisawa så på gutta spille fotball. Så gjerne hun ville vært med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
+<p>Andiswa så på gutta spille fotball. Hun ville så gjerne være med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p>Gutta sa: &quot;Gå og spill nettball. Nettball er for jenter og fotball er for gutter&quot;. Andisawa ble sinna.</p>
+<p>Gutta sa at hun skulle gå og spille nettball. De sa at nettball er for jenter og fotball er for gutter. Andiswa ble sinna.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p>Dagen etter var det en stor fotballkamp på skolen. Men den beste spilleren på laget var syk og kunne ikke spille. Hva skulle treneren gjøre?</p>
+<p>Dagen etter var det en stor fotballkamp på skolen. Treneren var bekymret fordi den beste spilleren på laget var syk og kunne ikke spille.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
-<p>Andisawa løp bort til treneren og ba og ba om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha med Andisawa på laget.</p>
+<p>Andiswa løp bort til treneren og tryglet om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha Andiswa med på laget.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
-<p>Det ble en hard kamp. Ingen hadde scoret mål etter første omgang.</p>
+<p>Det ble en hard kamp. Ingen hadde skåret mål etter første omgang.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
-<p>I andre omgang sentret en gutt ballen til Andisawa. Hun løp mot målet, brente til ballen og scoret.</p>
+<p>I andre omgang sentret en gutt ballen til Andiswa. Hun løp mot målet, klinte til ballen og skåret.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="andisawa-vår-fotballhelt-1">Andisawa vår fotballhelt</h2>
+<h2 id="fotballhelten-andiswa-1">Fotballhelten Andiswa</h2>
 <strong>Tekst:</strong> Eden Daniels<br> <strong>Illustrasjoner:</strong> Eden Daniels, Lisa Treffry-Goatley (ed.)<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
 Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
