--- a/stories/pa/0006_ਅਨਾਨਸੀ-ਅਤੇ-ਬੁੱਧੀ_slides.html
+++ b/stories/pa/0006_ਅਨਾਨਸੀ-ਅਤੇ-ਬੁੱਧੀ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Et lite frø: Historien om Wangari Maathai - Global African Storybook</title>
+  <title>ਅਨਾਨਸੀ ਅਤੇ ਬੁੱਧੀ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="et-lite-frø-historien-om-wangari-maathai" class="slide level1">
-<h1>Et lite frø: Historien om Wangari Maathai</h1>
+<section id="ਅਨਨਸ-ਅਤ-ਬਧ" class="slide level1">
+<h1>ਅਨਾਨਸੀ ਅਤੇ ਬੁੱਧੀ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
-<p>I en landsby ved foten av Mount Kenya i Øst-Afrika arbeidet en liten pike sammen med moren sin på åkeren. Wangari het hun.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
+<p>ਬਹੁਤ ਸਮਾਂ ਪਹਿਲਾਂ ਲੋਕਾਂ ਨੂੰ ਕੁਝ ਪਤਾ ਨਹੀਂ ਸੀ। ਉਹਨਾਂ ਨੂੰ ਫਸਲ ਬੀਜਣੀ ਨਹੀਂ ਸੀ ਆਉਂਦੀ, ਕੱਪੜੇ ਬੁਣਨੇ ਨਹੀਂ ਸੀ ਆਉਂਦੇ, ਅਤੇ ਲੋਹੇ ਦੇ ਸੰਦ ਬਣਾਉਣੇ ਨਹੀਂ ਸੀ ਆਉਂਦੇ। ਅਕਾਸ਼ ਵਿੱਚ, ਪਰਮੇਸ਼ੁਰ ਨਯਾਮੀ ਕੋਲ ਸੰਸਾਰ ਦੀ ਸਾਰੀ ਬੁੱਧੀ ਸੀ। ਉਸਨੇ ਬੁੱਧੀ ਨੂੰ ਮਿੱਟੀ ਦੇ ਘੜੇ ਵਿੱਚ ਸੁਰੱਖਿਅਤ ਰੱਖਿਆ ਹੋਇਆ ਸੀ।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
-<p>Wangari var glad i å være ute. Familien hadde en kjøkkenhage. Der vendte hun grønnsakbedet med den store kniven sin. Hun stakk små frø ned i den varme jorda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
+<p>ਇੱਕ ਦਿਨ, ਨਯਾਮੀ ਨੇ ਫ਼ੈਸਲਾ ਕੀਤਾ ਕਿ ਉਹ ਬੁੱਧੀ ਦਾ ਘੜਾ ਅਨਾਨਸੀ ਨੂੰ ਦੇਵੇਗਾ। ਜੱਦ ਵੀ ਅਨਾਨਸੀ ਮਿੱਟੀ ਦੇ ਘੜੇ ਵਿੱਚ ਵੇਖਦਾ, ਉਹ ਕੁਝ ਨਵਾਂ ਸਿੱਖਦਾ ਸੀ। ਇਹ ਬਹੁਤ ਦਿਲਚਸ ਸੀ!</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
-<p>Hun syntes den beste tida på dagen var rett etter solnedgang. Når det ble for mørkt til å se plantene visste hun at det var på tide å gå hjem. Hun gikk langs smale stier på markene og over bekker på sin vei.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
+<p>ਲਾਲਚੀ ਅਨਾਨਸੀ ਨੇ ਸੋਚਿਆ, &quot;ਮੈਂ ਘੜੇ ਨੂੰ ਲੰਬੇ ਰੁੱਖ ਦੇ ਉੱਪਰ ਸੁਰੱਖਿਅਤ ਰੱਖਾਂਗਾ I ਫੇਰ ਮੈਂ ਇਸਨੂੰ ਆਪਣੇ ਆਪ ਲਈ ਰੱਖ ਸਕਦਾ ਹਾਂ! &quot; ਉਸਨੇ ਲੰਬਾ ਧਾਗਾ ਬੁਣਿਆ, ਮਿੱਟੀ ਦੇ ਘੜੇ ਦੇ ਆਲੇ-ਦੁਆਲੇ ਲਪੇਟਿਆ, ਅਤੇ ਉਸ ਦੇ ਪੇਟ ਨਾਲ ਬੰਨ੍ਹਿਆ । ਉਹ ਰੁੱਖ ਤੇ ਚੜ੍ਹਨ ਲੱਗਾ। ਪਰ ਰੁੱਖ ਤੇ ਚੜ੍ਹਨਾ ਮੁਸ਼ਕਲ ਸੀ ਕਿਉਂਕਿ ਘੜਾ ਉਸਦੇ ਗੋਡਿਆਂ ਵਿੱਚ ਵੱਜੀ ਜਾਂਦਾ ਸੀ।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
-<p>Wangari var en flink pike og ville gjerne begynne på skolen. Men moren og faren ville hun skulle være hjemme og hjelpe til. Da hun ble syv år overtalte storebroren mor og far til å la henne få gå på skolen.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
+<p>ਇਸ ਸਮੇਂ ਅਨਾਨਸੀ ਦਾ ਨੌਜਵਾਨ ਪੁੱਤਰ ਰੁੱਖ ਦੇ ਥੱਲੇ ਖੜ੍ਹਾ ਦੇਖ ਰਿਹਾ ਸੀ। ਉਸ ਨੇ ਕਿਹਾ, &quot;ਜੇ ਤੁਸੀਂ ਘੜੇ ਨੂੰ ਆਪਣੀ ਪਿੱਠ ਤੇ ਬੰਨ੍ਹੋ ਤਾਂ ਤੁਹਾਨੂੰ ਸੌਖਾ ਨਹੀਂ ਹੋਵੇਗਾ?&quot; ਅਨਾਨਸੀ ਨੇ ਬੁੱਧੀ ਨਾਲ ਭਰੇ ਘੜੇ ਨੂੰ ਆਪਣੀ ਪਿੱਠ ਤੇ ਬੰਨ੍ਹਣ ਦੀ ਕੋਸ਼ਿਸ਼ ਕੀਤੀ ਅਤੇ ਅਸਲ ਵਿੱਚ ਇਹ ਬਹੁਤ ਜਿਆਦਾ ਸੌਖਾ ਸੀ।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
-<p>Hun likte å lære! Wangari lærte mer og mer for hver bok hun leste. Hun ble så flink på skolen at hun ble invitert til å studere i USA. Wangari ble så glad! Hun ville lære mer om verden.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
+<p>ਜਲਦੀ ਹੀ, ਉਹ ਰੁੱਖ ਦੇ ਉੱਪਰ ਪਹੁੰਚ ਗਿਆ। ਪਰ ਫਿਰ ਉਸ ਨੇ ਰੁਕ ਕੇ ਸੋਚਿਆ, &quot;ਸਾਰੀ ਬੁੱਧੀ ਤਾਂ ਮੇਰੇ ਕੋਲ ਹੋਣੀ ਚਾਹੀਦੀ ਸੀ, ਪਰ ਇੱਥੇ ਮੇਰਾ ਪੁੱਤਰ ਮੇਰੇ ਨਾਲੋਂ ਵੱਧ ਚਲਾਕ ਨਿਕਲਿਆ।” ਅਨਾਨਸੀ ਇਨ੍ਹਾਂ ਗੁੱਸੇ ਵਿੱਚ ਸੀ ਕਿ ਉਸ ਨੇ ਮਿੱਟੀ ਦੇ ਘੜੇ ਨੂੰ ਰੁੱਖ ਦੇ ਬਾਹਰ ਥੱਲੇ ਸੁੱਟ ਦਿੱਤਾ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
-<p>Wangari lærte mye nytt på det amerikanske universitetet. Hun studerte planter og hvordan de vokser. Og husket hvordan hun hadde vokst selv: i leker og spill med brødrene sine i Kenyas vakre skoger.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
+<p>ਉਹ ਜ਼ਮੀਨ 'ਤੇ ਟੁਕੜੇ-ਟੁਕੜੇ ਹੋ ਕੇ ਟੁੱਟ ਗਿਆ। ਹੁਣ ਹਰ ਕੋਈ ਬੁੱਧੀ ਸ਼ੇਅਰ ਕਰ ਸਕਦਾ ਸੀ I ਅਤੇ ਇਸ ਤਰ੍ਹਾਂ ਲੋਕਾਂ ਨੇ ਖੇਤੀ, ਕੱਪੜੇ ਬੁਣਨੇ, ਲੋਹੇ ਦੇ ਸੰਦ ਬਣਾਉਣੇ, ਅਤੇ ਹੋਰ ਸਾਰੇ ਕੰਮ ਸਿੱਖੇ ਜੋ ਕਿ ਲੋਕਾਂ ਨੂੰ ਅੱਜ ਆਉਂਦੇ ਹਨ।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,66 +150,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
-<p>Hun skjønte hun var glad i folk fra Kenya jo mer hun lærte. Hun ville de skulle være glade og frie. Og jo mer hun lærte jo mer husket hun hjemmet sitt i Afrika.</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
-<p>Da hun var ferdig med å studere dro hun tilbake til Kenya. Men landet hennes var forandret. Kjempestore farmer strakte seg utover i landet. Kvinnene hadde ikke ved til å tenne bål for å lage mat. Folk var fattige og barn sultet.</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
-<p>Wangari visste råd. Hun lærte kvinnene å plante trær ved å sette frø i jorda. Kvinnene solgte trærne og brukte pengene til beste for familien sin. De ble veldig glade. Wangari hadde fått dem til å føle seg sterke og mektige.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
-<p>Tiden gikk og de nye trærne vokste og ble til skog, og det kom vann i elvene igjen. Historien om Wangari spredte seg over hele Afrika. I dag er det millioner av trær som har vokst opp fra Wangaris frø.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
-<p>Wangari hadde arbeidet hardt. Folk over hele verden la merke til det og de ga henne en berømt pris. Den kalles Nobels fredspris. Hun ble den første afrikanske kvinnen som fikk den.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
-<p>Wangari døde i 2011, men vi kan tenke på henne hver gang vi ser et vakkert tre.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="et-lite-frø-historien-om-wangari-maathai-1">Et lite frø: Historien om Wangari Maathai</h2>
-<strong>Tekst:</strong> Nicola Rijsdijk<br> <strong>Illustrasjoner:</strong> Maya Marshak<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<h2 id="ਅਨਨਸ-ਅਤ-ਬਧ-1">ਅਨਾਨਸੀ ਅਤੇ ਬੁੱਧੀ</h2>
+<strong>Text:</strong> Ghanaian folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Anu Gill<br> <strong>Language:</strong> Punjabi<br>
 <p>
-Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>her</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
