--- a/stories/no/0110_et-lite-frø-historien-om-wangari-maathai.html
+++ b/stories/no/0110_et-lite-frø-historien-om-wangari-maathai.html
@@ -49,21 +49,21 @@ Nicola Rijsdijk<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
 
-<p>I en landsby ved foten av Mount Kenya i Øst-Afrika arbeidet en liten pike med moren sin på åkeren. Wangari het hun.</p>
+<p>I en landsby ved foten av Mount Kenya i Øst-Afrika arbeidet en liten pike sammen med moren sin på åkeren. Wangari het hun.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
 
-<p>Wangari var glad i å være ute. Familien hadde en hage. Der vendte hun grønnsakbedet med den store kniven sin. Hun stakk små frø ned i den varme jorda.</p>
+<p>Wangari var glad i å være ute. Familien hadde en kjøkkenhage. Der vendte hun grønnsakbedet med den store kniven sin. Hun stakk små frø ned i den varme jorda.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
 
-<p>Hun syntes den beste tida på dagen var rett etter solnedgang. Hun visste det var på tide å gå hjem når det ble for mørkt til å se plantene. Hun gikk langs smale stier på markene og over bekker på sin vei.</p>
+<p>Hun syntes den beste tida på dagen var rett etter solnedgang. Når det ble for mørkt til å se plantene visste hun at det var på tide å gå hjem. Hun gikk langs smale stier på markene og over bekker på sin vei.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
