--- a/stories/no/0111_hvorfor-flodhester-ikke-har-hår.html
+++ b/stories/no/0111_hvorfor-flodhester-ikke-har-hår.html
@@ -56,7 +56,7 @@ Basilio Gimo, David Ker<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
 
-<p>Flodhest var der også – han gikk en tur og spiste litt fint grønt gress.</p>
+<p>Flodhest var der også. Han gikk en tur og spiste litt fint grønt gress.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,14 +70,14 @@ Basilio Gimo, David Ker<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
 
-<p>Flodhest ba om unnskyldning til Kanin: “Jeg er lei meg, vennen min I så deg ikke. Vær så snill å tilgi meg!” Men Kanin vill ikke høre og han ropte til Flodhest: “Du gjorde det med vilje! En dag kommer du til å få se! Dette kommer til å straffe seg!”</p>
+<p>Flodhest ba om unnskyldning til Kanin: “Jeg er lei meg, vennen min, jeg så deg ikke. Vær så snill å tilgi meg!” Men Kanin ville ikke høre, og han ropte til Flodhest: “Du gjorde det med vilje! En dag kommer du til å få se! Dette kommer til å straffe seg!”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>Da dro Kanin for å find Ild, og han sa: “Dra og brenn Flodhest når hun kommer ut av vannet for å spise gress. Hun tråkka på meg!” Ild svarte: “Ikke noe problem, Kanin, vennen min. Jeg skal gjøre akkurat det du ba meg om.”</p>
+<p>Da dro Kanin for å finne Ild, og han sa: “Dra og brenn Flodhest når hun kommer ut av vannet for å spise gress. Hun tråkka på meg!” Ild svarte: “Ikke noe problem, Kanin, vennen min. Jeg skal gjøre akkurat det du ba meg om.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Basilio Gimo, David Ker<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
 
-<p>Flodhest begynte å gråte og løp mot vannet. Alt håret hennes brant i ilden. Flodhest gråt: “Håret mitt har brent bort i ilden! Du brente alt håret mitt! Håret mitt er borte! Det vakre, vakre håret mitt!</p>
+<p>Flodhest begynte å gråte og løp mot vannet. Alt håret hennes brant opp i ilden. Flodhest gråt: “Håret mitt har brent bort i ilden! Du brente alt håret mitt! Håret mitt er borte! Det vakre, vakre håret mitt!</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
