--- a/stories/no/0234_fotballhelten-andiswa.html
+++ b/stories/no/0234_fotballhelten-andiswa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Andisawa vår fotballhelt</title>
+    <title>Fotballhelten Andiswa </title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,13 +43,13 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 
-<h1 id="andisawa-vr-fotballhelt">Andisawa vår fotballhelt</h1>
+<h1 id="fotballhelten-andiswa">Fotballhelten Andiswa</h1>
 
 Eden Daniels<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
 
-<p>Andisawa så på gutta spille fotball. Så gjerne hun ville vært med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
+<p>Andiswa så på gutta spille fotball. Hun ville så gjerne være med! Hun spurte treneren om hun kunne få trene sammen med dem.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -63,35 +63,35 @@ Eden Daniels<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
 
-<p>Gutta sa: “Gå og spill nettball. Nettball er for jenter og fotball er for gutter”. Andisawa ble sinna.</p>
+<p>Gutta sa at hun skulle gå og spille nettball. De sa at nettball er for jenter og fotball er for gutter. Andiswa ble sinna.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
 
-<p>Dagen etter var det en stor fotballkamp på skolen. Men den beste spilleren på laget var syk og kunne ikke spille. Hva skulle treneren gjøre?</p>
+<p>Dagen etter var det en stor fotballkamp på skolen. Treneren var bekymret fordi den beste spilleren på laget var syk og kunne ikke spille.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
 
-<p>Andisawa løp bort til treneren og ba og ba om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha med Andisawa på laget.</p>
+<p>Andiswa løp bort til treneren og tryglet om å få lov til å spille. Hva skulle han svare? Han bestemte seg for å ha Andiswa med på laget.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
 
-<p>Det ble en hard kamp. Ingen hadde scoret mål etter første omgang.</p>
+<p>Det ble en hard kamp. Ingen hadde skåret mål etter første omgang.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
 
-<p>I andre omgang sentret en gutt ballen til Andisawa. Hun løp mot målet, brente til ballen og scoret.</p>
+<p>I andre omgang sentret en gutt ballen til Andiswa. Hun løp mot målet, klinte til ballen og skåret.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
